<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
<!--
    <item
        android:id="@+id/action_edit"
        android:title="edit"
        android:visible="true"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:visible="true"
        android:title="delete"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="always" />
-->


    <item
        android:id="@+id/app_bar_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_hint"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/menu_settings"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_power_24dp"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="always" />
</menu>
